--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -115,7 +115,7 @@
 		},
 		"core_selector": {
 			"title": "Выбор ядра сервера",
-			"description": "Файл <1>core.jar</1> не найден. Пожалуйста, выберите файл, который будет запускаться как ядро:"
+			"description": "Пожалуйста, выберите файл, который будет запускаться как ядро:"
 		}
 	}
 }
