--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -9,7 +9,8 @@
 		},
 		"errors": {
 			"server_exists": "Сервер с таким путем уже существует",
-			"save_error": "Ошибка сохранения"
+			"save_error": "Ошибка сохранения",
+			"action_failed": "Ошибка действия"
 		},
 		"title": "Менеджер серверов Lumi",
 		"version": "Версия {{version}}",
@@ -93,6 +94,13 @@
 			"label_players": "Игроки",
 			"edit_server_title": "Редактировать сервер",
 			"refresh_server_tooltip": "Обновить список",
+			"start_server": "Запустить сервер",
+			"stop_server": "Остановить сервер",
+			"start_action": "Запустить",
+			"kill_action": "Убить",
+			"loading": "Загрузка...",
+			"external": "Внешний",
+			"external_tooltip": "Сервер запущен вне лаунчера (PID неизвестен)",
 			"status": {
 				"online": "Онлайн",
 				"offline": "Оффлайн",
@@ -110,7 +118,18 @@
 				"no_jars": {
 					"title": "Нет ядра",
 					"message": "В выбранной папке не найдено ни одного .jar файла."
+				},
+				"external_process": {
+					"title": "Процесс недоступен",
+					"message": "Этот сервер запущен вне лаунчера или его PID был утерян. Остановите его вручную через консоль сервера или диспетчер задач."
 				}
+			},
+			"modal_kill": {
+				"title": "Принудительная остановка",
+				"description": "Вы собираетесь принудительно убить процесс сервера. Это НЕБЕЗОПАСНО.",
+				"warning": "Данные не будут сохранены (инвентари, постройки и т.д.). Рекомендуется использовать команду 'stop' или CTRL+C в консоли сервера.",
+				"confirm": "Всё равно убить",
+				"cancel": "Отмена"
 			}
 		},
 		"core_selector": {
