--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -101,6 +101,8 @@
 			"loading": "Загрузка...",
 			"external": "Внешний",
 			"external_tooltip": "Сервер запущен вне лаунчера (PID неизвестен)",
+			"confirm_delete": "Подвердить удаление",
+			"delete_server": "Удалить сервер",
 			"status": {
 				"online": "Онлайн",
 				"offline": "Оффлайн",
@@ -130,6 +132,27 @@
 				"warning": "Данные не будут сохранены (инвентари, постройки и т.д.). Рекомендуется использовать команду 'stop' или CTRL+C в консоли сервера.",
 				"confirm": "Всё равно убить",
 				"cancel": "Отмена"
+			},
+			"modal_delete": {
+				"title": "Удаление сервера",
+				"description": "Вы уверены, что хотите удалить этот сервер из списка?",
+				"warning": "Файлы сервера останутся на диске, но конфигурация в лаунчере будет удалена безвозвратно.",
+				"confirm": "Удалить",
+				"cancel": "Отмена"
+			},
+			"modal_error_log": {
+				"title": "Ошибка сканирования",
+				"description": "Не удалось добавить сервер. В процессе обработки папки произошла ошибка:",
+				"copy": "Копировать ошибку",
+				"close": "Закрыть"
+			},
+			"errors": {
+				"server_exists": "Сервер с таким путем уже существует",
+				"save_error": "Ошибка сохранения",
+				"action_failed": "Ошибка действия",
+				"settings_missing": "Файл настроек (settings.yml) не найден",
+				"core_missing": "Файл ядра ({{core}}) отсутствует",
+				"no_jars": "В папке нет jar-файлов"
 			}
 		},
 		"core_selector": {
