--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -10,7 +10,11 @@
 		"errors": {
 			"server_exists": "Сервер с таким путем уже существует",
 			"save_error": "Ошибка сохранения",
-			"action_failed": "Ошибка действия"
+			"action_failed": "Ошибка действия",
+			"settings_missing": "Файл настроек (settings.yml) не найден",
+			"core_missing": "Файл ядра ({{core}}) отсутствует",
+			"no_jars": "В папке нет jar-файлов",
+			"unknown_error": "Неизвестная ошибка"
 		},
 		"title": "Менеджер серверов Lumi",
 		"version": "Версия {{version}}",
@@ -152,7 +156,13 @@
 				"action_failed": "Ошибка действия",
 				"settings_missing": "Файл настроек (settings.yml) не найден",
 				"core_missing": "Файл ядра ({{core}}) отсутствует",
-				"no_jars": "В папке нет jar-файлов"
+				"no_jars": "В папке нет jar-файлов",
+				"unknown_error": "Неизвестная ошибка"
+			},
+			"modal_start_error": {
+				"title": "Ошибка запуска",
+				"description": "Не удалось запустить сервер. Проверьте консоль или логи для подробностей.",
+				"close": "Закрыть"
 			}
 		},
 		"core_selector": {
